; ModuleID = '/home/carl/AnghaBench/FFmpeg/fftools/extr_ffprobe.c_ffprobe_show_program_version.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/fftools/extr_ffprobe.c_ffprobe_show_program_version.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AV_BPRINT_SIZE_UNLIMITED = common dso_local global i32 0, align 4
@SECTION_ID_PROGRAM_VERSION = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [8 x i8] c"version\00", align 1
@FFMPEG_VERSION = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [10 x i8] c"copyright\00", align 1
@.str.2 = private unnamed_addr constant [42 x i8] c"Copyright (c) %d-%d the FFmpeg developers\00", align 1
@program_birth_year = common dso_local global i32 0, align 4
@CONFIG_THIS_YEAR = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [15 x i8] c"compiler_ident\00", align 1
@CC_IDENT = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [14 x i8] c"configuration\00", align 1
@FFMPEG_CONFIGURATION = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @ffprobe_show_program_version to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ffprobe_show_program_version(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %4 = load i32, i32* @AV_BPRINT_SIZE_UNLIMITED, align 4
  %5 = call i32 @av_bprint_init(i32* %3, i32 1, i32 %4)
  %6 = load i32*, i32** %2, align 8
  %7 = load i32, i32* @SECTION_ID_PROGRAM_VERSION, align 4
  %8 = call i32 @writer_print_section_header(i32* %6, i32 %7)
  %9 = load i32, i32* @FFMPEG_VERSION, align 4
  %10 = call i32 @print_str(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i32 %9)
  %11 = load i32, i32* @program_birth_year, align 4
  %12 = load i32, i32* @CONFIG_THIS_YEAR, align 4
  %13 = call i32 @print_fmt(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str.2, i64 0, i64 0), i32 %11, i32 %12)
  %14 = load i32, i32* @CC_IDENT, align 4
  %15 = call i32 @print_str(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.3, i64 0, i64 0), i32 %14)
  %16 = load i32, i32* @FFMPEG_CONFIGURATION, align 4
  %17 = call i32 @print_str(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.4, i64 0, i64 0), i32 %16)
  %18 = load i32*, i32** %2, align 8
  %19 = call i32 @writer_print_section_footer(i32* %18)
  %20 = call i32 @av_bprint_finalize(i32* %3, i32* null)
  ret void
}

declare dso_local i32 @av_bprint_init(i32*, i32, i32) #1

declare dso_local i32 @writer_print_section_header(i32*, i32) #1

declare dso_local i32 @print_str(i8*, i32) #1

declare dso_local i32 @print_fmt(i8*, i8*, i32, i32) #1

declare dso_local i32 @writer_print_section_footer(i32*) #1

declare dso_local i32 @av_bprint_finalize(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
